--- a/app/src/main/res/layout/video_recycler_item.xml
+++ b/app/src/main/res/layout/video_recycler_item.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="video"
-            type="com.example.apparchsample.domain.SampleVideo" />
+            type="com.example.apparchsample.domain.PlansModel" />
 
     </data>
 <androidx.appcompat.widget.LinearLayoutCompat
@@ -17,8 +17,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="0dp"
+        app:cardCornerRadius="@dimen/margin_small"
         app:cardElevation="5dp"
+        android:layout_marginStart="@dimen/margin_medium"
+        android:layout_marginEnd="@dimen/margin_medium"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp">
 
@@ -28,32 +30,32 @@
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:text="@{video.title}"
+                android:text="@{video.name}"
                 android:textAlignment="viewStart"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:textStyle="bold"
+                android:layout_marginStart="@dimen/margin_medium"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/video_thumbnail"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/video_thumbnail"
-                android:layout_marginBottom="@dimen/cardview_default_elevation"
-                tools:text="Video title" />
+                android:maxLines="3"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="File Broken" />
 
             <ImageView
                 android:id="@+id/video_thumbnail"
-                android:layout_width="0dp"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                app:imageUrl="@{video.thumbnail}"
+                android:layout_width="@dimen/layout_height_header"
+                android:layout_height="100dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_baseline_broken_image_24"
+                app:imageUrl="@{video.fileOriginalName}"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="@dimen/cardview_default_elevation"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
